# Stl3LaserCut

./: CMakeLists.txt
client/: main.cc
src/stl3lasercut/: AssemblyPlane.cc  AssemblyPlane.h  Desmos.cc  Desmos.h  HierarchicalOrdering.h  InterferencePlane.cc  InterferencePlane.h  Line.cc  Line.h  Lookup.h  LoopPlane.cc  LoopPlane.h  Mesh.cc  Mesh.h  Projector.cc  Projector.h  RangeUnion.h  RingVector.h  StlIo.cc  StlIo.h  TopologyPlane.cc  TopologyPlane.h  Util.cc  Util.h  VertexConnectivityGraph.cc  VertexConnectivityGraph.h
tests/: InterferencePlaneTests.cc  LineTests.cc  LoopPlaneTests.cc  MeshTests.cc  PlaneTests.cc  ProjectorTests.cc  RangeUnionTests.cc  SampleGeometry.cc  SampleGeometry.h  TopologyPlaneTests.cc  Util.cc  Util.h  UtilTests.cc  VertexConnectivityTests.cc  main.cc
